--- a/Python入門.ipynb
+++ b/Python入門.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#導入：簡単な演算\" data-toc-modified-id=\"導入：簡単な演算-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>導入：簡単な演算</a></span></li><li><span><a href=\"#配列（ベクトル）\" data-toc-modified-id=\"配列（ベクトル）-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>配列（ベクトル）</a></span></li><li><span><a href=\"#配列（行列）\" data-toc-modified-id=\"配列（行列）-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>配列（行列）</a></span></li><li><span><a href=\"#繰り返し\" data-toc-modified-id=\"繰り返し-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>繰り返し</a></span></li><li><span><a href=\"#条件分岐\" data-toc-modified-id=\"条件分岐-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>条件分岐</a></span></li><li><span><a href=\"#自分で関数を定義する\" data-toc-modified-id=\"自分で関数を定義する-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>自分で関数を定義する</a></span></li><li><span><a href=\"#用意されている様々な関数\" data-toc-modified-id=\"用意されている様々な関数-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>用意されている様々な関数</a></span></li><li><span><a href=\"#グラフのプロット\" data-toc-modified-id=\"グラフのプロット-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>グラフのプロット</a></span></li><li><span><a href=\"#オイラー法による微分方程式の数値解法\" data-toc-modified-id=\"オイラー法による微分方程式の数値解法-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>オイラー法による微分方程式の数値解法</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 導入：簡単な演算"
@@ -1853,7 +1863,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
